factchecker/static/factchecker/css/main.css
.title {
    max-height: 220px;
    padding: 32px;
    background-color: #e9ecef;
}

.red-font {
    color: red;
}

.blue-font {
    color: blue;
}

.emoji-rating {
    font-size: 8em;
}

.source-name {
    text-transform: uppercase;
    font-weight: bold;
}

.claim-review-summary:hover {
    border: 1px solid hotpink;
}

.claim-review-summary:hover .read-more {
    color: hotpink;
}

.read-more {
    color: blue;
}

.claim-review-summary {
    border: 1px solid white;
    color: black;
    padding: 10px;
}

body {
  min-height: 75rem;
  padding-top: 4.5rem;
}

.context {
    font-style: italic;
    text-align: right;
}

.rating {
    text-align: center;   
    background-color: #e9ecef;
    margin-bottom: 25px;
    padding: 20px 0px 10px 0px;
    width: 100%;
}

.source-img {
    max-height: 160px;
    max-width: 160px;
}

.claim {
    margin-bottom: 0px;
}

